--- a/flux-clusters/dev-cluster/prometheus/release-helm-metrics-server.yml
+++ b/flux-clusters/dev-cluster/prometheus/release-helm-metrics-server.yml
@@ -1,4 +1,3 @@
----
 apiVersion: helm.toolkit.fluxcd.io/v2beta2
 kind: HelmRelease
 metadata:
@@ -12,6 +11,24 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: metrics-server
-      version: 3.9.0
+      version: 3.12.0
   interval: 10s
   targetNamespace: kube-system
+
+
+apiVersion: helm.toolkit.fluxcd.io/v2beta1
+kind: HelmRelease
+metadata:
+  name: prometheus
+  namespace: prometheus
+spec:
+  interval: 10m
+  chart:
+    spec:
+      chart: kube-prometheus-stack
+      version: 36.0.0
+      sourceRef:
+        kind: HelmRepository
+        name: kube-prometheus-stack
+        namespace: prometheus
+      interval: 5m
