--- a/flux-clusters/dev-cluster/prometheus/helm-bb-app.yml
+++ b/flux-clusters/dev-cluster/prometheus/helm-bb-app.yml
@@ -1,4 +1,14 @@
 ---
+apiVersion: source.toolkit.fluxcd.io/v1beta2
+kind: HelmRepository
+metadata:
+  name: source-helm-bb-app
+  namespace: flux-system
+spec:
+  interval: 1m0s
+  url: https://sidd-harth.github.io/block-buster-helm-app
+
+---
 apiVersion: helm.toolkit.fluxcd.io/v2beta2
 kind: HelmRelease
 metadata:
