--- a/flux-clusters/dev-cluster/prometheus/helm-kube-prometheus-stack.yml
+++ b/flux-clusters/dev-cluster/prometheus/helm-kube-prometheus-stack.yml
@@ -1,4 +1,14 @@
 ---
+apiVersion: source.toolkit.fluxcd.io/v1beta2
+kind: HelmRepository
+metadata:
+  name: kube-prometheus-stack
+  namespace: flux-system
+spec:
+  interval: 1m0s
+  url: https://prometheus-community.github.io/helm-charts
+
+---
 apiVersion: helm.toolkit.fluxcd.io/v2beta2
 kind: HelmRelease
 metadata:
