--- a/flux-clusters/dev-cluster/prometheus/helm-bb-app.yml
+++ b/flux-clusters/dev-cluster/prometheus/helm-bb-app.yml
@@ -8,20 +8,20 @@ spec:
   interval: 1m0s
   url: https://sidd-harth.github.io/block-buster-helm-app
 
-# ---
-# apiVersion: helm.toolkit.fluxcd.io/v2beta2
-# kind: HelmRelease
-# metadata:
-#   name: 6-demo-helm-release-bb-app
-#   namespace: flux-system
-# spec:
-#   chart:
-#     spec:
-#       chart: block-buster-helm-app
-#       reconcileStrategy: ChartVersion
-#       sourceRef:
-#         kind: HelmRepository
-#         name: source-helm-bb-app
-#       version: 7.6.0
-#   interval: 10s
-#   targetNamespace: web
+---
+apiVersion: helm.toolkit.fluxcd.io/v2beta2
+kind: HelmRelease
+metadata:
+  name: 6-demo-helm-release-bb-app
+  namespace: flux-system
+spec:
+  chart:
+    spec:
+      chart: block-buster-helm-app
+      reconcileStrategy: ChartVersion
+      sourceRef:
+        kind: HelmRepository
+        name: source-helm-bb-app
+      version: 7.6.0
+  interval: 10s
+  targetNamespace: web
