--- a/flux-clusters/dev-cluster/prometheus/helm-kube-prometheus-stack.yml
+++ b/flux-clusters/dev-cluster/prometheus/helm-kube-prometheus-stack.yml
@@ -22,7 +22,7 @@ spec:
         kind: HelmRepository
         name: kube-prometheus-stack
       version: 56.0.0
-  interval: 10s
+  interval: 1m0s
   targetNamespace: prometheus
   values:
     additionalPrometheusRulesMap: {}
